
2008-04-18  Lynn Garren

	* ReadMe.cygwin: changing cygwin directions for new versions of VC

	* HepMC/MomentumUnits.h: enum HepMCmomentumUnits{ UNKNOWN = 0, MEV, GEV };
	Recommended usage: MomentumUnits::GEV
	* HepMC/PositionUnits.h: enum HepMCpositionUnits{ unknown = 0, MM, CM } 
	Recommended usage: PositionUnits::MM

2008-04-17  Lynn Garren

	* Rename configure.in to configure.ac, which is now the common usage.
	* configure.ac: Major restructuring.  Using libtool. 
	Only Linux, MacOSX, and Windows are explicitly supported.
	All Makefile.am's have been restructured to use libtool.

2008-04-01  Lynn Garren


	* HepMC/IO_GenEvent.h: replace const char* filename with 
	  const std::string& in the constructor accepting a filename.

2008-03-31  Lynn Garren

	* HepMC/GenEvent.h: random_states() now returns const std::vector<long>&
	  HepMC/GenVertex.h: position() now returns a const FourVector&
	  HepMC/GenParticle.h: flow() now returns const Flow&
	  and polarization() now returns const Polarization&

	* HepMC/IO_GenEvent.h: add a constructor that accepts the filename
	  as a string.

2008-03-28  Lynn Garren

	* HepMC/GenParticle.h: The momentum() method now returns a const
	  reference to a FourVector instead of a copy of a FourVector.
	  This change should be backwards compatible.

2008-03-27  Lynn Garren

	* examples: set Herwig and Pythia units to GeV and mm

2008-03-26  Lynn Garren

	* HepMC/MomentumUnits.h: new class to encapsulate momentum units,
	  which are represented by a single enum
	* HepMC/PositionUnits.h: new class to encapsulate position units,
	  which are represented by a single enum
	* GenEvent: add MomentumUnits and PositionUnits data members and
	  associated methods
	* GenVertex: add protected convert_position method
	* GenParticle: add protected convert_momentum method

	* HepMC/PdfInfo.h: add pdf_id1(), pdf_id2(), set_pdf_id1(), and
	  set_pdf_id2() for the pdf set id numbers
	
	* IO_GenEvent: get and put unit information in a new line 